# twadoOS

./: Makefile  Makefile~  README.md  boot.cfg  grub.cfg  grub.cfg~
code/: kernel.c
code/sanity_check/: multiboot_check.sh  multiboot_check.sh~
notes/: #notes.org#  .#notes.org  intel_manual.org  intel_manual.org~  notes.org  os_from_0_to_1.org  os_from_0_to_1.org~
oldcode/: boot.s  kernel.c
src/kernel/: kernel.c
src/libc/: CMakeLists.txt
